# pyjq

./: .gitignore  .travis.yml  CHANGELOG.md  DEVELOP.md  LICENSE  MANIFEST.in  MEMO.txt  Pipfile  README.md  README.rst  _pyjq.c  _pyjq.pyx  devel-requirement.txt  devel-requirements.txt  generate_readme_rst.sh  pyjq.py  pyjq.pyx  setup.cfg  setup.py  test_pyjq.py  tox.ini
.circleci/: config.yml
.github/workflows/: python-publish.yml
