[metadata]
name = pyjq
version = 2.3.0
url = http://github.com/doloopwhile/pyjq
author = Omoto Kenji
description = Binding for jq JSON processor.
long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
keywords = jq
license = MIT License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: JavaScript

[options]
install_requires =
  six
py_modules = pyjq
